Simple Calculator app(ResourceBundle.Control)

--- a/localization/localization/src/main/resources/menu.properties
+++ b/localization/localization/src/main/resources/menu.properties
@@ -1,4 +1,11 @@
-menu=Menu
-file=File
-edit=Edit
-properties=Properties
+greeting=Please, choose operation
+add=Add
+multiply=Multiply
+divide=Divide
+subtract=Subtract
+input_first=Enter the first number
+input_second=Enter the second number
+warning=Entered symbol is not a number
+result=Result: 
+wrong_choice=Wrong choice
+zero_devide=Divide by zero
