--- a/localization/localization/pom.xml
+++ b/localization/localization/pom.xml
@@ -34,11 +34,13 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.2.1</version>
 				<configuration>
-					<mainClass>com.dev.localization.RunApp</mainClass>
+					<mainClass>com.dev.run.RunApp</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
